# python-docker-image

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hello_fastapi.py  main.py  pyproject.toml
core/: config.py  story_generator.py
db/: database.py
models/: job.py  story.py
rag_utils/: utils.py
routers/: job.py  lab.py  ocr.py  story.py
schemas/: lab.py  story.py
