[project]
name = "fastapi-poetry"
version = "0.1.0"
description = "Starter for FastAPi with Poetry"
authors = [
    {name = "franz",email = "franzbugtong0411@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi[standard] (>=0.122.0,<0.123.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langchain-google-genai (>=3.2.0,<4.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
